<resources>
    <string name="app_name">PECSi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PECSi</string>
    <string name="nav_header_subtitle">pecs-project.dmi.unict.it/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_target_selection">Target Selection</string>
    <string name="menu_application_list">Application List</string>
    <string name="menu_preset_selection">Preset Selection</string>
    <string name="menu_policy_settings">Policy Settings</string>
    <string name="menu_alert_history">Alert History</string>

    <string name="target_selection_global">Global</string>
    <string name="target_selection_target">Target</string>

    <string-array name="alert_types">
        <item>Text Logs</item>
        <item>Notifications</item>
        <item>Haptic</item>
    </string-array>
</resources>