<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pecs.pecsi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_policy_settings"
        android:name="com.pecs.pecsi.ui.policy_settings.InfoPolicySettingsFragment"
        android:label="@string/menu_policy_settings"
        tools:layout="@layout/fragment_info_policy_settings" >
        <action
            android:id="@+id/action_nav_info_to_preset_selection"
            app:destination="@id/nav_preset_selection" />
    </fragment>

    <fragment
        android:id="@+id/nav_preset_selection"
        android:name="com.pecs.pecsi.ui.policy_settings.PresetSelectionFragment"
        android:label="@string/menu_preset_selection"
        tools:layout="@layout/fragment_preset_selection" >
        <action
            android:id="@+id/action_nav_preset_selection_to_application_list"
            app:destination="@id/nav_application_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_application_list"
        android:name="com.pecs.pecsi.ui.policy_settings.ApplicationListFragment"
        android:label="@string/menu_application_list"
        tools:layout="@layout/fragment_application_list" >
        <action
            android:id="@+id/action_application_list_to_policy_settings"
            app:destination="@id/nav_actual_policy_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_actual_policy_settings"
        android:name="com.pecs.pecsi.ui.policy_settings.PolicySettingsFragment"
        android:label="@string/menu_policy_settings"
        tools:layout="@layout/fragment_policy_settings" >
    <action
        android:id="@+id/action_nav_actual_policy_settings_to_home"
        app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_alert_history"
        android:name="com.pecs.pecsi.ui.alert_history.AlertHistoryFragment"
        android:label="@string/menu_alert_history"
        tools:layout="@layout/fragment_alert_history" />
</navigation>